fixed the spacing between spotlights

--- a/chamber/styles/large.css
+++ b/chamber/styles/large.css
@@ -189,5 +189,8 @@
     display: block;
   }
 
+  .spotlight-business h3 {
+    font-size: 1.2rem;
+  }
   
 }
