--- a/chamber/styles/medium.css
+++ b/chamber/styles/medium.css
@@ -221,6 +221,7 @@
         display: flex;
         padding: 10px;
         gap: 10px;
+    width: 100%;
       }
       
       .spotlight-business section {
@@ -232,6 +233,7 @@
         padding-bottom: 60px;
         margin: 0 auto;
         background-color: #163391;
+        padding-top: 50px;
       }
       
       .spotlight-business img {
@@ -242,5 +244,9 @@
       .spotlight-business h2 {
         margin: 10px;
         margin-top: 20px;
+      }
+
+      .spotlight-business h3 {
+        font-size: 1.5rem;
       }
 }
